# RepoSpark

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  ISSUES_AND_IMPROVEMENTS.md  README.md  a.txt  install.sh  pyproject.toml  qt-designer.sh  requirements.txt  run_repospark.sh
scripts/: qt-designer.sh
src/: demo.py  repospark.py
src/repospark/: __init__.py  __main__.py  app.py  demo.py  main.py  ui_loader.py
src/repospark/assets/: __init__.py
src/repospark/assets/ui/: __init__.py  advanced_tab.ui  basic_tab.ui  confirm_dialog.ui  main_window.ui  project_tab.ui  readme_tab.ui  scaffold_tab.ui
src/repospark/core/: __init__.py  git_operations.py  github_api.py  scaffold_generator.py
src/repospark/ui/: __init__.py  main_window.py
src/repospark/widgets/: __init__.py  folder_tree_widget.py
src/repospark/workers/: __init__.py  repository_worker.py
templates/: __init__.py  project_types.py  readme_template.py
tests/: github-repo-checklist-new.md  repo_test_checklist.md  test_harness.sh  test_markdown_preview.py  test_radio_buttons.py  test_repospark.py  test_templates.py  test_ui_loading.py  tests-README.md  x app-to-test.sh
