[project]
name = "repospark"
version = "0.1.0"
description = "A PyQt6 GUI application for creating GitHub repositories"
authors = [
    {name = "RepoSpark", email = "1149213+RichLewis007@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.4.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[project.scripts]
repospark = "src.repospark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repospark"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]


