[project]
name = "repospark"
version = "0.1.0"
description = "A PySide6 GUI application for creating GitHub repositories"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Rich Lewis" }]
# Author: Rich Lewis - GitHub: @RichLewis007
dependencies = [
    "PySide6>=6.4.0",
    "markdown>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]

[project.scripts]
repospark = "src.repospark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency]
groups.dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
]


