[project]
name = "repospark"
version = "0.2.0"
description = "A PySide6 GUI application for creating GitHub repositories"
readme = "README.md"
requires-python = ">=3.13.11"
authors = [{ name = "Rich Lewis" }]
# Author: Rich Lewis - GitHub: @RichLewis007

dependencies = [
  "PySide6==6.7.3",
  "markdown>=3.4.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-qt>=4.4.0",
  "ruff>=0.5.0",
  "pyright>=1.1.380",
]

[project.scripts]
repospark = "repospark:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
qt_api = "pyside6"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "src/repospark/assets/**/*.ui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"